# bazel-pycross-poetry-gazelle-example

./: BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  pyproject.toml
app/: BUILD.bazel  app.py
