bazel_dep(name = "rules_python", version = "0.32.2")
bazel_dep(name = "aspect_rules_py", version = "0.7.3")
bazel_dep(name = "rules_pycross", version = "0.5.4")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.32.2")
bazel_dep(name = "rules_go", version = "0.47.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.6")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")

# Download and setup Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.1")

# Download and setup Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)
use_repo(python, "python_versions")

env = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
use_repo(env, "pycross_environments")

# Load Python external dependencies into Bazel from Poetry lock
lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")
lock_import.import_poetry(
    lock_file = "//:poetry.lock",
    project_file = "//:pyproject.toml",
    repo = "pip",
)

lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
use_repo(lock_repos, "pip")
